cambios en style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="img/2.jpg">
                 <div style="display: flex;flex-direction: row;">
                     <span id="millones">
-                        <span id="hours"></span> : <span id="minutes"></span> : <span id="seconds"></span>
+                        <span id="cuentaRegresiva">
                     </span>
             </div>
         </div>
