--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div id="contenido2" style="display: block;" class="content2">
-            <img src="img/2.jpg">
+            <img src="img/2.gif">
                 <div style="display: flex;flex-direction: row;">
                     <span id="millones">
                         <span id="cuentaRegresiva">
